project(continuum_mechanics)
include_directories("${CHASTE_CONTINUUM_MECHANICS_INCLUDE_DIRS}" #"${CHASTE_CELL_BASED_INCLUDE_DIRS}" 
    "${CHASTE_GLOBAL_INCLUDE_DIRS}" "${CHASTE_MESH_INCLUDE_DIRS}" 
    "${CHASTE_LINALG_INCLUDE_DIRS}" "${CHASTE_ODE_INCLUDE_DIRS}" "${CHASTE_PDE_INCLUDE_DIRS}")
file(GLOB_RECURSE CHASTE_CONTINUUM_MECHANICS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.hpp)
add_library(continuum_mechanics STATIC ${CHASTE_CONTINUUM_MECHANICS_SOURCES})
install(TARGETS continuum_mechanics DESTINATION lib)
